# rdf4j-cli

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
examples/: README.md  complete_workflow.sh  namespaces.sh  query_formats.sh  statements.sh  upload_file.sh
rdf4j-cli/: Cargo.toml
rdf4j-cli/src/: cli.rs  lib.rs  main.rs  output.rs
rdf4j-cli/src/commands/: namespace.rs  query.rs  repo.rs  server.rs  statement.rs  update.rs  upload.rs
rdf4j-cli/tests/: integration.rs
rdf4j-rs/: Cargo.toml  README.md
rdf4j-rs/src/: client.rs  lib.rs  repo.rs
src/: cli.rs  client.rs  error.rs  lib.rs  main.rs  output.rs
src/commands/: mod.rs  namespace.rs  query.rs  repo.rs  server.rs  statement.rs  update.rs  upload.rs
tests/: integration.rs
