[package]
name = "rdf4j-cli"
version = "0.1.0"
edition = "2024"
description = "CLI for managing RDF4J repositories via the REST API"
license = "MIT"
repository = "https://github.com/odysa/rdf4j-cli"
keywords = ["rdf", "rdf4j", "sparql", "cli", "linked-data"]
categories = ["command-line-utilities", "database"]
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["blocking"] }
serde_json = "1"
tabled = "0.17"
thiserror = "2"
anyhow = "1"
oxrdf = "0.3"
oxrdfio = "0.2"
sparesults = "0.2"
csv = "1"

[dev-dependencies]
testcontainers = "0.23"
tokio = { version = "1", features = ["rt-multi-thread"] }
rand = "0.9"
