[package]
name = "rdf4j-rs"
version = "0.1.0"
edition = "2024"
description = "Rust SDK for the RDF4J REST API"
license = "MIT"
repository = "https://github.com/odysa/rdf4j-cli"
keywords = ["rdf", "rdf4j", "sparql", "linked-data"]
categories = ["database"]

[dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
thiserror = "2"
oxrdf = "0.3"
oxrdfio = "0.2"
