[package]
name = "rdf4j-rs"
version.workspace = true
edition.workspace = true
description = "Rust SDK for the RDF4J REST API"
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["rdf", "rdf4j", "sparql", "linked-data"]
categories = ["database"]

[dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
thiserror = "2"
oxrdf = "0.3"
oxrdfio = "0.2"
